--- a/quiz/2_address-book/tsconfig.json
+++ b/quiz/2_address-book/tsconfig.json
@@ -4,7 +4,9 @@
     "checkJs": true,
     "target": "es5",
     "lib": ["es2015", "dom", "dom.iterable"],
-    "noImplicitAny": false
+    "noImplicitAny": true, //true: 애니라도 선언해(모든타입요구, false: 선언안하면 알아서 any)
+    "strict": true, //엄격한 타입검사
+    "strictFunctionTypes": true
   },
   "include": ["./src/**/*"]
 }
